[package]
name = "tile-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "^0.24.7", optional = true }
clap = { version = "^4", features = ["env", "derive"] }
oxipng = { version = "^9.0", features = ["zopfli"], default-features = false }
zorder = "0.1.0"
funty = "2.0.0"

[features]
image = ["dep:image"]
