[package]
name = "tile-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.24.7"
clap = { version = "^4", features = ["env", "derive"] }
oxipng = { version="^9.0", features=["parallel", "zopfli", "filetime"], default-features=false }
zorder = "0.1.0"
rayon = "1.10.0"
